@@ -11,6 +11,9 @@ Changes in version 0.1.2.8-alpha - 2007-??-??
     - Report events where a resolve succeeded or where we got a socks
       protocol error correctly, rather than calling both of them "INTERNAL".
 
+  o Minor bugfixes (other)
+    - Display correct results when reporting which versions are recommended,
+      and how recommended they are.  (Resolves bug 383.)
 
 Changes in version 0.1.2.7-alpha - 2007-02-06
   o Major bugfixes (rate limiting):
